k8s/cloud/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: tictactoe
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: primary
  template:
    metadata:
      labels:
        app: redis
        role: primary
    spec:
      containers:
      - name: redis
        image: docker.io/bitnami/redis:7.4
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis-data
          mountPath: /bitnami/redis/data
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: tictactoe
  labels:
    app: redis
    role: primary
spec:
  ports:
  - port: 6379
    targetPort: redis
  selector:
    app: redis
    role: primary
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-secondary
  namespace: tictactoe
spec:
  serviceName: redis-secondary
  replicas: 2
  selector:
    matchLabels:
      app: redis
      role: secondary
  template:
    metadata:
      labels:
        app: redis
        role: secondary
    spec:
      containers:
      - name: redis
        image: docker.io/bitnami/redis:7.4
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-secondary
  namespace: tictactoe
  labels:
    app: redis
    role: secondary
spec:
  ports:
  - port: 6379
    targetPort: redis
  selector:
    app: redis
    role: secondary
