k8s/cloud/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: tictactoe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: karchevskii/distr_sys-users_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /users-service/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /users-service/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              cpu: "512m"
              memory: "384Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: tictactoe
spec:
  selector:
    app: users
  ports:
    - port: 8000
      targetPort: 8000
